--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "keystone start",
     "build": "keystone build",
     "migrate": "keystone prisma migrate dev",
-    "migration:status": "keystone prisma migrate status"
+    "migration:status": "keystone prisma migrate status",
+    "db:seed": "IS_BUILDING=true tsx seed.ts"
   },
   "dependencies": {
     "@keystone-6/auth": "^8.0.0",
